--- a/example.env
+++ b/example.env
@@ -39,13 +39,13 @@ APP_WORKERS=4
 DEBUG=false
 
 # Nginx Configuration
-NGINX_RATE_LIMIT_GENERAL=60
-NGINX_RATE_LIMIT_LOGIN=5
-NGINX_RATE_LIMIT_API=30
-NGINX_GENERAL_BURST=20
-NGINX_API_BURST=10
-NGINX_LOGIN_BURST=3
-NGINX_PROXY_TIMEOUT=600
+#NGINX_RATE_LIMIT_GENERAL=60
+#NGINX_RATE_LIMIT_LOGIN=5
+#NGINX_RATE_LIMIT_API=30
+#NGINX_GENERAL_BURST=20
+#NGINX_API_BURST=10
+#NGINX_LOGIN_BURST=3
+#NGINX_PROXY_TIMEOUT=600
 
 # Docker Resource Limits (for docker-compose)
 QUART_APP_MEMORY_LIMIT=8G
