--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,5 @@
-# File: default.conf.template
+# File: nginx.conf 
 # Directory: /deepseek-coder-setup/nginx/
-# This template uses environment variables that get substituted at runtime
-# nginx 1.19+ will automatically process this and create /etc/nginx/conf.d/default.conf
 
 # User and worker processes
 user nginx;
@@ -28,14 +26,14 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 120;
+    keepalive_timeout 120;  # Increased from 65
     types_hash_max_size 2048;
     client_max_body_size 10M;
 
-    # Timeouts - configurable via environment
-    proxy_connect_timeout ${NGINX_PROXY_TIMEOUT:-600}s;
-    proxy_send_timeout ${NGINX_PROXY_TIMEOUT:-600}s;
-    proxy_read_timeout ${NGINX_PROXY_TIMEOUT:-600}s;
+    # Timeouts - INCREASED FOR 33B MODEL
+    proxy_connect_timeout 600s;  # Increased from 300s
+    proxy_send_timeout 600s;     # Increased from 300s
+    proxy_read_timeout 600s;     # Increased from 300s
     
     # For WebSocket connections
     proxy_http_version 1.1;
@@ -76,11 +74,14 @@ http {
     add_header Referrer-Policy "strict-origin-when-cross-origin";
     add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'";
 
-    # Rate Limiting Zones - configurable via environment
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=${NGINX_RATE_LIMIT_GENERAL:-60}r/m;
-    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=${NGINX_RATE_LIMIT_LOGIN:-5}r/m;
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=${NGINX_RATE_LIMIT_API:-30}r/m;
+    # Rate Limiting Zones
+    # 1. General rate limiting
+    limit_req_zone $binary_remote_addr zone=general_limit:1m rate=60r/m;
     
+    # 2. Login attempt rate limiting
+    limit_req_zone $binary_remote_addr zone=login_limit:1m rate=5r/m;
+    
+    # Rate limit status page for failed login protection
     limit_req_status 429;
 
     # Cache configuration for CDN proxy
@@ -114,24 +115,10 @@ http {
             gzip_types text/css application/javascript;
         }
         
-        # API endpoints with separate rate limiting
-        location /api/ {
-            limit_req zone=api_limit burst=${NGINX_API_BURST:-10} nodelay;
-            
-            proxy_pass http://quart-app:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-        
         # Main application proxy
         location / {
-            limit_req zone=general_limit burst=${NGINX_GENERAL_BURST:-20} nodelay;
+            # General rate limiting
+            limit_req zone=general_limit burst=10 nodelay;
             
             proxy_pass http://quart-app:8000;
             proxy_set_header Host $host;
@@ -144,9 +131,10 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             
-            proxy_connect_timeout 60s;
-            proxy_send_timeout ${NGINX_PROXY_TIMEOUT:-600}s;
-            proxy_read_timeout ${NGINX_PROXY_TIMEOUT:-600}s;
+            # Timeouts - INCREASED FOR 33B MODEL
+            proxy_connect_timeout 60s;   # Increased from 10s
+            proxy_send_timeout 600s;     # Increased from 30s
+            proxy_read_timeout 600s;     # Increased from 60s
         }
         
         # WebSocket endpoint with longer timeouts
@@ -161,14 +149,15 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             
+            # Significantly increased timeouts for WebSocket
             proxy_connect_timeout 60s;
-            proxy_send_timeout ${NGINX_PROXY_TIMEOUT:-600}s;
-            proxy_read_timeout ${NGINX_PROXY_TIMEOUT:-600}s;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
         }
         
         # Login endpoint with stricter rate limiting
         location /login {
-            limit_req zone=login_limit burst=${NGINX_LOGIN_BURST:-3} nodelay;
+            limit_req zone=login_limit burst=3 nodelay;
             limit_req_status 429;
             
             proxy_pass http://quart-app:8000/login;
@@ -185,13 +174,14 @@ http {
             add_header Cache-Control "public, max-age=2592000";
         }
         
-        # Custom error pages
+        # Custom 403 error page for unauthorized IP access
         error_page 403 /unauthorized.html;
         location = /unauthorized.html {
             root /usr/share/nginx/html;
             internal;
         }
         
+        # Custom 429 error page for rate limiting
         error_page 429 /rate_limited.html;
         location = /rate_limited.html {
             root /usr/share/nginx/html;
