--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -33,8 +33,8 @@ save 5 1
 # Persistence - AOF (Append Only File)
 appendonly yes
 appendfilename "appendonly.aof"
-appendfsync always
-# Use 'always' instead of 'everysec' for immediate persistence
+appendfsync everysec
+# Use 'always' instead of 'everysec' for immediate persistence, eh
 # This ensures every write is immediately flushed to disk
 no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 100
